# paulidecomp

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  requirements.txt  setup.py
benchmarks/: memory_subprocess.py
include/: common.hpp
src/paulidecomp/hamaguchi/: __init__.py
src/paulidecomp/hantzko/: __init__.py
src/paulidecomp/jones/: __init__.py
src/paulidecomp/romero/: __init__.py
src/wrappers/: wrap_hamaguchi.cpp  wrap_hantzko.cpp  wrap_jones.cpp  wrap_romero.cpp
tests/: test_inner_prods.py  test_pauli_vector.py
