[project]
name = "paulidecomp"
version = "0.1.0"
description = "Pauli decomposition toolkit"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20"
]

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11>=2.10",
    "numpy>=1.20"  # Required for header inclusion
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false  # Set to false since you're using explicit subpackages

[tool.setuptools]
zip-safe = false  # Critical for C++ extensions